GERONIMO-3335 make it easy for the local maven repo to be a plugin repo
git-svn-id: https://svn.apache.org/repos/asf/geronimo/server/trunk@557828 13f79535-47bb-0310-9956-ffa450edef68